[package]
name = "ralph"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
pollster = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.21"
url = "2"
wgpu = "0.19"
winit = "0.29"
